--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,18 +22,32 @@ main{
 }
 .input-container{
     display: flex;
+    justify-content: space-between;
     height: 100px;
     width: auto;
     gap: 10px;
 }
 input[type="text"] {
-    width: 100px;
-    height: 100px;
-    font-size: 36px; /* Makes the cursor and text bigger */
-    text-align: center; /* Centers cursor horizontally */
+    width: 70px;
+    height: 70px;
+    font-size: 36px;
+    text-align: center;
     vertical-align: middle;
-    line-height: 100px; /* Vertically centers the cursor in most browsers */
+    line-height: 100px;
     box-sizing: border-box;
+    border-radius: 8px;
+    border: 1px solid black;
+}
+.letter-box.submitted {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 70px;
+    font-size: 36px;
+    line-height: 100px;
+    border: 1px solid black;
+    border-radius: 8px;
 }
 .game-bottom{
     height: 100px;
